Attempting to fix field and button spacing DT-1627

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1450,6 +1450,24 @@ hr.line {
   }
 }
 
+// Fields and buttons within columns
+@media screen and (max-width: 1200px) {
+	[class*="columns-three"] {
+		.widget.blogsearch input,
+		.widget.signupform fieldset input,
+		.widget.profile form input {
+			width: 100%;
+		}
+		.widget.blogsearch button,
+		.widget.ecombasket .ecombasket-pull,
+		.widget.signupform fieldset button,
+		.widget.profile form button {
+			margin-left: 0;
+			margin-top: 6px;
+		}
+	}
+}
+
 /* Scrollbars */
 
 body, html {
